# FlagAI

./: .gitignore  CHANGELOG.md  CLA.md  CLEANUP_REPORT.md  CODE_OF_CONDUCT.md  COMMITTERS.csv  CONTRIBUTING.md  Dockerfile  FLASH_ATTN_UPGRADE.md  GOVERNANCE.md  LICENSE  README.md  README_zh.md  RUN_ON_MAC_M1.md  SUPPORT.md  UPGRADE_ANALYSIS.md  UPGRADE_IMPLEMENTATION_PLAN.md  UPGRADE_TO_0.18.2.md  ai_optimization.py  altdiffusionTest.ipynb  aquila-7b-multigpu-infer.py  config.json  last_issue.txt  llama_30b_mutigpu.py  load_model.py  prepare_test.sh  read_laion.py  requirements.txt  setup.cfg  setup.py  test.py  test_autoloader.py  test_model.py  train_deepspeed.py  validate.py
examples/BMTrain/: .dockerignore  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README-ZH.md  README.md  Release.txt  doc_requirements.txt  other_requirements.txt  pyproject.toml  setup.py
examples/BMTrain/.github/: pull_request_template.md
examples/BMTrain/.github/ISSUE_TEMPLATE/: bug_report.yml  build_err.yml  features_request.yml
examples/BMTrain/.github/workflows/: build.yml  build_whl.yml  publish.yaml  release.yml
examples/BMTrain/bmtrain/: __init__.py  block_layer.py  debug.py  global_var.py  hook_func.py  init.py  layer.py  param_init.py  parameter.py  pipe_layer.py  store.py  synchronize.py  utils.py  wrapper.py  zero_context.py
examples/BMTrain/bmtrain/benchmark/: __init__.py  all_gather.py  reduce_scatter.py  send_recv.py
examples/BMTrain/bmtrain/distributed/: ops.py  (+1 more)
examples/BMTrain/cmake/: FindNCCL.cmake
examples/BMTrain/csrc/: bind.cpp
examples/BMTrain/docs/: Makefile  UPDATE_0.2.0.md  UPDATE_0.2.3.md  UPDATE_1.0.0.md
examples/BMTrain/example/: README.md  benchmark.py  run.sh  train.py
examples/BMTrain/tests/: test_all.py  test_column_parallel_linear.py  test_different_output_shape.py  test_dropout.py  test_grad_accu.py  test_has_inf_nan.py  test_init_parameters.py  test_init_parameters_multi_gpu.py  test_inspector_hidden.py  test_load_ckpt.py  test_loss_func.py  test_middle_hidden.py  test_model_wrapper.py  test_multi_return.py  test_nccl_backward.py  test_no_grad.py  test_optim.py  test_optim_state.py  test_other_hidden.py  test_parallel_projection.py  test_requires_grad.py  test_requires_grad_multi_gpu.py  test_row_parallel_linear.py  test_send_recv.py  test_store.py  test_synchronize.py  test_training.py  utils.py
(+2219 files in other folders)
